routecontroller/routecontroller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: routecontroller
  namespace: default
  labels:
    app: routecontroller
    app.kubernetes.io/name: routecontroller
    app.kubernetes.io/component: cf-networking
    app.kubernetes.io/part-of: cloudfoundry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: routecontroller
  template:
    metadata:
      namespace: default
      annotations:
        prometheus.io/path: /metrics
        prometheus.io/port: "8080"
        prometheus.io/scrape: "true"
      labels:
        app: routecontroller
        app.kubernetes.io/name: routecontroller
        app.kubernetes.io/component: cf-networking
        app.kubernetes.io/part-of: cloudfoundry
    spec:
      containers:
      - name: routecontroller
        image: gcr.io/cf-routing/scratch/routecontroller:latest
        args:
        - --enable-leader-election=true
        resources:
          limits:
            cpu: 100m
            memory: 10Gi
          requests:
            cpu: 100m
            memory: 20Mi
      terminationGracePeriodSeconds: 10
      serviceAccountName: routecontroller
